# FinSage.ai

./: README.md  cli.py  pyproject.toml
finsage/: __init__.py  agents.py  planner.py
finsage/agents/: __init__.py  calculation_agent.py  comparison_agent.py  data_agent.py  document_agent.py  llm_agent.py  news_agent.py  prediction_agent.py  rag_agent.py  reasoning_agent.py  risk_agent.py  validation_agent.py
tests/: test_calculation.py
