[tool.poetry]
name = "finsage"
version = "0.1.0"
description = "FinSage multi-agent MVP scaffold"
authors = ["FinSage Developer <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"
requests = "^2.31"
yfinance = "^0.2.20"
feedparser = "^6.0"
sentence-transformers = "^2.2"
beautifulsoup4 = "^4.12"
transformers = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
